--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "tape ./tests/test.js | tap-spec",
-    "start": "nodemon ./serverside/server.js",
+    "start": "node ./serverside/server.js",
     "nodemon": "nodemon ./serverside/server.js"
   },
   "keywords": [
